# Pick_Place_Blocksworld_Environment

./: README.md
Universal_Robots_ROS2_Description-humble/: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
Universal_Robots_ROS2_Description-humble/config/: initial_positions.yaml
Universal_Robots_ROS2_Description-humble/gazebo/models/black_blocks/: model.sdf
Universal_Robots_ROS2_Description-humble/gazebo/models/blue_blocks/: model.sdf
Universal_Robots_ROS2_Description-humble/gazebo/models/green_blocks/: model.config  model.sdf
Universal_Robots_ROS2_Description-humble/gazebo/models/red_blocks/: model.sdf
Universal_Robots_ROS2_Description-humble/gazebo/models/white_blocks/: model.sdf
Universal_Robots_ROS2_Description-humble/gazebo/models/yellow_blocks/: model.sdf
Universal_Robots_ROS2_Description-humble/gazebo/worlds/: blocksworld.world
Universal_Robots_ROS2_Description-humble/launch/: setup.launch.py  view_ur.launch.py
Universal_Robots_ROS2_Description-humble/test/: test_ur_urdf_xacro.py
Universal_Robots_ROS2_Description-humble/urdf/: ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_macro_w_gripper.xacro
Universal_Robots_ROS2_Description-humble/urdf/inc/: eef.xacro  ur_transmissions.xacro
Universal_Robots_ROS2_Gazebo_Simulation-humble/: README.md  Universal_Robots_ROS2_Gazebo_Simulation.humble.repos  ci_status.md
Universal_Robots_ROS2_Gazebo_Simulation-humble/ur_simulation_gazebo/config/: ur_controllers.yaml
Universal_Robots_ROS2_Gazebo_Simulation-humble/ur_simulation_gazebo/test/: test_gazebo.py
blocksword_planner/: package.xml  setup.cfg  setup.py
blocksword_planner/blocksword_planner/: blocks_domain.py  blocksword_node.py  pyhop.py
blocksword_planner/launch/: htn_launch.py
moveit_task_constructor/demo/launch/: demo.launch.py
mtc_package/: CMakeLists.txt  package.xml
mtc_package/launch/: pick_place.launch.py
mtc_package/src/: BlockFollower.cpp  manager.cpp  mtc_node.cpp
my_sim_plugins/: CMakeLists.txt  package.xml
my_sim_plugins/msg/: BlockPoseArray.msg
my_sim_plugins/src/: pose_relay_plugin.cpp
ros2_robotiq_gripper/robotiq_description/urdf/: 2f_85.ros2_control.xacro  robotiq_2f_85_gripper.urdf.xacro  robotiq_2f_85_macro.urdf.xacro
ur5_gripper_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_gripper_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  ur.srdf  ur.urdf.xacro
ur5_gripper_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
ur5_new_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ur5_new_moveit_config/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  mtc.rviz  ros2_controllers.yaml  ur.ros2_control_moveit.xacro  ur.srdf  ur.urdf.xacro
ur5_new_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
