<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mtc_package</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wn.notaro@gmail.com">william</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>moveit_task_constructor_core</depend>
  <depend>rclcpp</depend>
  <depend>ros_gz_interfaces</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>std_msgs</exec_depend>
  <depend>my_sim_plugins</depend>
  <depend>geometry_msgs</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
